# whisper-clean-media

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
media-cleaner/: README.md
media_cleaner/: Steps.md  classify_image_dn.py  classify_image_nsfw.py  clean_transcription.py  convert_to_mp4.py  convert_to_wav.py  download_nsfw_model.sh  find_profanity.py  make_images_from_video.py  profanity.json  remove_clip.py  remove_profanity.py  test.json  utils.py
